# ev

./: .env  Cargo.toml  README.md
src/: cli.rs  envfile.rs  lib.rs  loader.rs  main.rs  terminal.rs
src/commands/: root.rs
