[package]
name = "ev-manager"
description = "Control your environment."
authors = ["Konstantin Zhigaylo <zero@kosyazero.com>"]
keywords = ["cli", "environment", "env"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kostya-zero/ev"
repository = "https://github.com/kostya-zero/ev"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "ev"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
indexmap = { version = "2.12.1", features = ["std"] }
thiserror = "2.0.17"
